[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Font/Macondo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player/Sprite/fullsheet.png" type="Texture" id=2]
[ext_resource path="res://Menu/Scripts/EndGameWizard.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="AnimatedTexture" id=2]

[node name="EndGameWizard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00108, 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.290196, 0.8, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 91.0
margin_top = 1.0
margin_right = 142.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="PlayAgainWiz" type="Button" parent="."]
margin_left = 92.0
margin_top = 124.0
margin_right = 241.0
margin_bottom = 144.0
text = "Play Again!"

[node name="MainMenu" type="Button" parent="."]
margin_left = 91.0
margin_top = 152.0
margin_right = 241.0
margin_bottom = 172.0
text = "Back to Main Menu"

[node name="SpriteE" type="Sprite" parent="."]
position = Vector2( 154.833, 51 )
scale = Vector2( 1.17138, 1.09639 )
z_index = 2
texture = ExtResource( 2 )
normal_map = SubResource( 2 )
hframes = 8
vframes = 6
frame = 30

[connection signal="pressed" from="PlayAgainWiz" to="." method="_on_PlayAgainWiz_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
